<resources>
    <string name="app_name">PocketStock</string>
    <string name="my_stocks">My stocks</string>
    <string name="news">News</string>
    <string name="total_money">Total money</string>
    <string name="total_stocks">Total stocks</string>
    <string name="widget_label">My stock portfolio</string>
    <string name="bought_shares">Bought shares</string>
    <string name="invested_money">Invested money</string>
    <string name="empty_portfolio_message">"PORTFOLIO IS EMPTY. ADD STOCKS."</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="open_news">Open news</string>
    <string name="message_for_add_stock" >"%1$s shares of %2$s added to the portfolio"</string>
    <string name="not_price_for_add_stock">"%1$s not exist on market. Please check your choose."</string>
    <string name="not_ticker_message">Please, enter the stock symbol</string>
    <string name="not_count_message">Please enter the number of shares</string>
    <string name="companyname">CompanyName</string>
    <string name="exchange">Exchange:</string>
    <string name="industry">Industry:</string>
    <string name="sector">Sector:</string>
    <string name="ceo">CEO:</string>
    <string name="about">About:</string>
    <string name="stocksymbol">StockSymbol</string>
    <string name="stockcount">StockCount</string>
    <string name="input_count_of_stock">input count of stock</string>
    <string name="stock_symbol">stock symbol</string>
    <string name="add_stock">Add stock</string>
    <string name="initial_money">0$</string>
    <string name="initial_stocks">0 stocks</string>
    <string name="stockname">stockName</string>
    <string name="price">price</string>
    <string name="countstock">countStock</string>
    <string name="shares">Shares %1d</string>
    <string name="buy_price">Buy price %.02f</string>
    <string name="add_stock_to_the_portfolio">Add stock to the portfolio</string>

</resources>
