<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/total_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_margin"
        android:padding="@dimen/text_view_padding"
        android:text="@string/total_money"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/summ_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="@dimen/text_view_padding"
        android:text="@string/initial_money"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/stock_list"
        app:layout_constraintEnd_toStartOf="@+id/summ_stocks"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_money"
        app:layout_constraintVertical_bias="0.462"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/summ_stocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_view_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:padding="@dimen/text_view_padding"
        android:text="@string/initial_stocks"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/stock_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_money" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stock_list"
        android:layout_width="350dp"
        android:layout_height="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="60dp"
        android:clipToPadding="false"/>

</android.support.constraint.ConstraintLayout>